--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .logo-img {
-	width: 50px;
+	width: 70px;
 	height: auto;
 }
 
@@ -39,6 +39,9 @@ img {
 	min-height: 800px;
 	color: #fff;
 	position: relative;
+}
+.main-header a {
+	font-size: 1.4rem;
 }
 
 .main-header .showcase {
@@ -97,14 +100,19 @@ img {
 	border-radius: 5px;
 }
 
-.service-info h3 {
-	font-size: 2rem;
+#service .service-info h3 {
+	font-size: 1.9rem;
 	margin: 0.80rem 0;
 }
 
+#service .service-info p {
+	font-size: 1.4rem;
+}
+
 #about,
-#portfolio {
-	height: 100vh;
+#portfolio,
+#client {
+	height: 100%;
 }
 #about {
 	padding-top: 10%;
@@ -132,6 +140,15 @@ img {
 	/* border: solid red 2px; */
 	padding-left: 1.5em;
 }
+#about .about-info h4,
+#about .skills h4 {
+	font-size: 2.5rem;
+}
+
+#about .about-info p,
+#about .skills .progress-title {
+	font-size: 1.4rem;
+}
 
 #about .top-line {
 	border-top: solid green 3px;
@@ -156,7 +173,7 @@ img {
 	position: relative;
 	margin: 5px 0;
 	font-family: Montserrat, sans-serif;
-	font-size: 15px;
+	font-size: 16px;
 	line-height: 15px;
 	font-weight: 400;
 	color: #2e2e2e;
@@ -165,7 +182,6 @@ img {
 .progress-title {
 	z-index: 100;
 	font-weight: bold;
-	font-size: 1.2rem;
 }
 
 .progress-number-wrapper {
@@ -177,7 +193,7 @@ img {
 	margin-bottom: 4px;
 	border-radius: 3px;
 	background-color: rgb(32, 36, 32);
-	padding: 0 8px;
+	padding: 2px 8px;
 	position: absolute;
 	bottom: 0;
 	-moz-transform: translateX(-50%);
@@ -190,9 +206,9 @@ img {
 .progress-number-wrapper,
 .progress-number-mark {
 	font-family: Open Sans, sans-serif;
-	font-size: 11px;
+	font-size: 15px;
 	line-height: 24px;
-	height: 24px;
+	height: 30px;
 	letter-spacing: 0px;
 	font-weight: 600;
 	font-style: normal;
@@ -226,18 +242,21 @@ img {
 }
 
 /* Portfolio style */
+#portfolio {
+	margin-bottom: 15%;
+	margin-top: 7%;
+}
 
 #portfolio .port-gallery {
 	display: grid;
 	grid-template-columns: repeat(8, 1fr);
 	grid-template-rows: repeat(8, 5vw);
 	grid-gap: 25px;
-	margin-bottom: 15%;
 }
 
-#portfolio h3 {
-	margin-top: 1.5em;
-	padding: 2em 0;
+#portfolio .title {
+	margin-top: 0.5em;
+	padding: 1.5em 0;
 }
 
 #portfolio .gallery__img {
@@ -301,7 +320,7 @@ img {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	padding-bottom: 5%;
+	padding: 7% 0;
 	background-color: rgb(89, 133, 92);
 	color: #fff;
 }
@@ -313,8 +332,8 @@ img {
 	margin-bottom: 2.5em;
 	font-size: 2.2rem;
 }
-#client h4 {
-	font-size: 1.2rem;
+#client .client-name {
+	font-size: 1.5rem;
 	font-weight: 600;
 	color: #b4a7a7;
 }
@@ -349,22 +368,42 @@ img {
 }
 
 /* Blogs section style */
+#blogs {
+	margin: 7% auto;
+}
+#blogs .bp {
+	margin-bottom: 2em;
+	font-size: 2.8rem;
+}
 .blog-wrapper {
-	display: flex;
-	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 20px;
 }
 
-/* .blog-wrapper h3,
-.blog-wrapper h4,
-.blog-wrapper p {
-	margin: 2px;
-	padding: 2px;
-	border: red solid 2px;
-} */
+.blog-info .blog-title {
+	font-size: 2.2rem;
+}
+.blog-info h4 {
+	font-size: 1.3rem;
+	color: rgb(136, 136, 136);
+}
+.blog-info .blog-text {
+	font-size: 1.4rem;
+	line-height: 1.5;
+	margin-bottom: 2em;
+}
+.blog-info {
+	padding: 0 1.5em 3em 1.5em;
+}
 
+.blog-content {
+	width: 100%;
+	height: auto;
+	border: #535353 solid 1px;
+}
 .blog-image {
-	width: 280px;
-	height: 230px;
+	height: 25vh;
 }
 
 .blog-image img {
@@ -372,4 +411,96 @@ img {
 	height: 100%;
 	object-fit: cover;
 	display: block;
+}
+
+.blog-btn {
+	font-weight: 600;
+	font-size: 1.3rem;
+	border: seagreen solid 1px;
+}
+/* contact style */
+#contact {
+	background-color: rgb(89, 133, 92);
+	padding: 5% 2%;
+}
+
+#contact .title {
+	margin-bottom: 1.5em;
+	font-size: 2.9rem;
+}
+
+#contact .input-field label {
+	color: rgb(184, 179, 179);
+	font-size: 1.5rem;
+}
+
+#contact .input-field input[type=text] {
+	padding-bottom: 1em;
+}
+
+/* label underline focus color */
+#contact .input-field input[type=text]:focus,
+#message:focus {
+	border-bottom: 1px solid rgb(57, 73, 97);
+	box-shadow: 0 1px 0 0 #000;
+}
+
+#contact .input-field input[type=text],
+#message {
+	border-bottom: 1px solid rgb(255, 255, 255);
+	box-shadow: 0 1px 0 0 #000;
+	color: #f2f2f2;
+}
+
+#contact #message {
+	height: 200px;
+}
+
+#contact .btn-clr {
+	background-color: rgb(68, 67, 67);
+	text-transform: capitalize;
+}
+
+/* Main footer style */
+#main-footer {
+	background-color: ;
+}
+
+#main-footer .logo-img {
+	width: 75px;
+	margin-top: 1.4em;
+	margin-bottom: 2em;
+}
+
+#main-footer .footer-content {
+	margin: 8% auto 3% auto;
+}
+
+#main-footer .footer-text-para {
+	font-size: 1.2rem;
+	margin-bottom: 1.3em;
+}
+
+#main-footer .link-header {
+	font-weight: bolder;
+	color: rgba(54, 53, 53, 0.705);
+	margin: 1.5em auto;
+}
+
+#main-footer .footer-link {
+	font-size: 1.35rem;
+	margin-bottom: 0.5em;
+}
+#main-footer .footer-link a {
+	color: rgba(70, 70, 70, 0.836);
+}
+
+#main-footer .footer-link a:hover {
+	color: rgb(0, 0, 0);
+}
+
+#main-footer .footer-copyright .copy {
+	font-size: 1.5rem;
+	margin-bottom: 15%;
+	color: rgba(70, 70, 70, 0.836);
 }
