--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,15 @@ img {
 	font-size: 2rem;
 }
 
+#main-footer .logo-collection {
+	display: flex;
+}
+#main-footer .logo-collection i {
+	font-size: 2.5rem;
+	margin-right: 0.5em;
+	color: rgb(5, 94, 52);
+}
+
 #main-footer .footer-link {
 	font-size: 1.5rem;
 	margin-bottom: 0.5em;
